# Freelancer

./: .gitignore  Cargo.toml  TUTORIAL.md  index.html
src/: contract.rs  errors.rs  events.rs  lib.rs  storage.rs  types.rs
test_snapshots/test/: test_cancel.1.json  test_cancel_after_deposit.1.json  test_dispute_and_resolution.1.json  test_double_initialization_panics.1.json  test_flow.1.json  test_freelancer_cannot_release.1.json  test_multiple_milestones.1.json  test_only_company_can_release.1.json  test_single_milestone_flow.1.json
tests/: integration.rs
